--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
  {
   "name": "webapp",
   "version": "1.0.0",
-  "start": "node app.js"
+  "start": "node app.js",
   "dependencies": {
     "express": "^4.17.0"
   }
